Fixed bug #66528

Report errors in commit, rollback and autocommit handlers.